--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,8 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: install-cmake
-      uses: Symbitic/install-cmake@v0.1.0
+    uses: ConorMacBride/install-package@v1.1.0
+    with:
+      # Packages to install with brew on macOS
+      brew: cmake
     
     - name: Use Node.js
       uses: actions/setup-node@v3
